Aanpassingen aan de kaart

--- a/1_data_inlezen_en_bekijken.Rmd
+++ b/1_data_inlezen_en_bekijken.Rmd
@@ -2,6 +2,8 @@
 title: "Data inlezen en bekijken"
 output:
   html_notebook: default
+  html_document:
+    df_print: paged
 ---
 
 Laad de libraries die we in dit deel van de workshop nodig hebben.
