--- a/3_kaart_maken.Rmd
+++ b/3_kaart_maken.Rmd
@@ -69,7 +69,7 @@ leaflet() %>%
 Vervang de OpenStreetMap ondergrond door de BRT Achtergrondkaart.
 
 ```{r}
-brtAchtergrondkaart <- "http://geodata.nationaalgeoregister.nl/tiles/service/wmts/brtachtergrondkaart/EPSG:3857/{z}/{x}/{y}.png"
+brtAchtergrondkaart <- "http://geodata.nationaalgeoregister.nl/tiles/service/wmts/brtachtergrondkaartgrijs/EPSG:3857/{z}/{x}/{y}.png"
 
 leaflet() %>%
   addTiles(urlTemplate = brtAchtergrondkaart,
@@ -125,7 +125,7 @@ Maak van de kaart een Shiny app.
 # Data 
 bevingen <- read_csv("./data/bevingen.csv")
 veld <- read_json("./data/groningenveld.json")
-brtAchtergrondkaart <- "http://geodata.nationaalgeoregister.nl/tiles/service/wmts/brtachtergrondkaart/EPSG:3857/{z}/{x}/{y}.png"
+brtAchtergrondkaart <- "http://geodata.nationaalgeoregister.nl/tiles/service/wmts/brtachtergrondkaartgrijs/EPSG:3857/{z}/{x}/{y}.png"
 
 # Kleurenpalet
  pal <- colorNumeric(palette = "YlOrRd", domain = c(-1:4))
@@ -228,7 +228,7 @@ De app werkt, maar het probleem is dat iedere keer wanneer je een andere drempel
 # Data 
 bevingen <- read_csv("./data/bevingen.csv")
 veld <- read_json("./data/groningenveld.json")
-brtAchtergrondkaart <- "http://geodata.nationaalgeoregister.nl/tiles/service/wmts/brtachtergrondkaart/EPSG:3857/{z}/{x}/{y}.png"
+brtAchtergrondkaart <- "http://geodata.nationaalgeoregister.nl/tiles/service/wmts/brtachtergrondkaartgrijs/EPSG:3857/{z}/{x}/{y}.png"
 
 # Kleurenpalet
  pal <- colorNumeric(palette = "YlOrRd", domain = c(-1:4))
@@ -264,12 +264,6 @@ server <- function(input, output) {
       addMapPane("bevingen",  zIndex = 420) %>%
       addTopoJSON(topojson = veld, weight = 1, color = "#555555", opacity = 1, fillOpacity = 0.3,
                   options = pathOptions(pane = "groningen veld")) %>%
-      addCircles(data = bevingen, lng = ~longitude, lat = ~latitude, color = ~pal(magnitude), 
-                 weight = 1, radius = ~10^magnitude/10, fillOpacity = 0.7,
-                 popup = ~paste("Datum: ", format(datum, "%d-%m-%Y"), "<br>",
-                                "Locatie:", locatie, "<br>",
-                                "Magnitude:" , magnitude),
-                 options = pathOptions(pane = "bevingen")) %>%
       setView(6.8, 53.3, zoom = 10) 
   })
   
@@ -277,7 +271,8 @@ server <- function(input, output) {
   observe({
     leafletProxy(mapId = "kaart") %>%
       clearShapes() %>%
-      addCircles(data = gefilterdeBevingen(), lng = ~longitude, lat = ~latitude, color = ~pal(magnitude),                  weight = 1, radius = ~10^magnitude/10, fillOpacity = 0.7,
+      addCircles(data = gefilterdeBevingen(), lng = ~longitude, lat = ~latitude, color = ~pal(magnitude),
+                 weight = 1, radius = ~10^magnitude/10, fillOpacity = 0.7,
                  popup = ~paste("Datum: ", format(datum, "%d-%m-%Y"), "<br>",
                                 "Locatie:", locatie, "<br>",
                                 "Magnitude:" , magnitude),
@@ -295,7 +290,7 @@ Verberg bij het opstarten de kaartlaag met het gasveld. Maak deze laag pas zicht
 # Data 
 bevingen <- read_csv("./data/bevingen.csv") 
 veld <- read_json("./data/groningenveld.json")
-brtAchtergrondkaart <- "http://geodata.nationaalgeoregister.nl/tiles/service/wmts/brtachtergrondkaart/EPSG:3857/{z}/{x}/{y}.png"
+brtAchtergrondkaart <- "http://geodata.nationaalgeoregister.nl/tiles/service/wmts/brtachtergrondkaartgrijs/EPSG:3857/{z}/{x}/{y}.png"
 
 # Kleurenpalet
  pal <- colorNumeric(palette = "YlOrRd", domain = c(-1:4))
@@ -332,12 +327,6 @@ server <- function(input, output) {
       addMapPane("bevingen",  zIndex = 420) %>%
       addTopoJSON(topojson = veld, weight = 1, color = "#555555", opacity = 1, fillOpacity = 0.3,
                   options = pathOptions(pane = "groningen veld"), group = "groningen veld") %>%
-      addCircles(data = bevingen, lng = ~longitude, lat = ~latitude, color = ~pal(magnitude), 
-                 weight = 1, radius = ~10^magnitude/10, fillOpacity = 0.7,
-                 popup = ~paste("Datum: ", format(datum, "%d-%m-%Y"), "<br>",
-                                "Locatie:", locatie, "<br>",
-                                "Magnitude:" , magnitude),
-                 options = pathOptions(pane = "bevingen")) %>%
       setView(6.8, 53.3, zoom = 10) %>%
       hideGroup("groningen veld")
   })
